--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "aws_hackathon",
   "version": "1.0.0",
   "description": "",
-  "main": "test-transcribe.js",
+  "main": "playground/test-transcribe.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
